WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123157
[sh4] lastRegister(), firstFPRegister() and lastFPRegister() are missing
https://bugs.webkit.org/show_bug.cgi?id=123157
Summary
[sh4] lastRegister(), firstFPRegister() and lastFPRegister() are missing
Julien Brianceau
Reported
2013-10-22 06:08:36 PDT
The following implementations are missing from SH4Assembler.h RegisterID lastRegister() FPRegisterID firstFPRegister() FPRegisterID lastFPRegister()
Attachments
Add missing implementations in SH4Assembler.h
(1.37 KB, patch)
2013-10-22 06:11 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-10-22 06:11:17 PDT
Created
attachment 214848
[details]
Add missing implementations in SH4Assembler.h
Andreas Kling
Comment 2
2013-10-22 06:15:07 PDT
Comment on
attachment 214848
[details]
Add missing implementations in SH4Assembler.h rs=me
WebKit Commit Bot
Comment 3
2013-10-22 06:43:58 PDT
Comment on
attachment 214848
[details]
Add missing implementations in SH4Assembler.h Clearing flags on attachment: 214848 Committed
r157789
: <
http://trac.webkit.org/changeset/157789
>
WebKit Commit Bot
Comment 4
2013-10-22 06:43:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug