[sh4] Add missing lastRegister(), firstFPRegister() and lastFPRegister(). https://bugs.webkit.org/show_bug.cgi?id=123157

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-10-22
Reviewed by Andreas Kling.

* assembler/SH4Assembler.h:
(JSC::SH4Assembler::lastRegister):
(JSC::SH4Assembler::firstFPRegister):
(JSC::SH4Assembler::lastFPRegister):

Canonical link: https://commits.webkit.org/141235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157789 268f45cc-cd09-0410-ab3c-d52691b4dbfc